--- a/view/frontend/layout/default_head_blocks.xml
+++ b/view/frontend/layout/default_head_blocks.xml
@@ -4,8 +4,7 @@
  * Magenizr Raygun
  *
  * @category  Magenizr
- * @copyright Copyright (c) 2023 Magenizr (https://www.magenizr.com)
- * @license   https://www.magenizr.com/license Magenizr EULA
+ * @copyright Copyright (c) 2023 Magenizr (https://magenizr.com.au)
  */
 -->
 
