--- a/view/frontend/templates/head/js.phtml
+++ b/view/frontend/templates/head/js.phtml
@@ -1,4 +1,4 @@
-<?php if ($block->isEnabled() && !empty($block->getApiKey())): ?>
+<?php if ($block->isEnabled()): ?>
     <script type="text/javascript">
         !function(a,b,c,d,e,f,g,h){a.RaygunObject=e,a[e]=a[e]||function(){
             (a[e].o=a[e].o||[]).push(arguments)},f=b.createElement(c),g=b.getElementsByTagName(c)[0],
